3.6/mule-user-guide/cassandra-connector.adoc
= CassandraDB Connector
:keywords: connectors, anypoint, studio, esb, cassandra, databases

*_Community_*

The Anypoint(TM) Connector for Apache Cassandra allows Mule applications to access the data in http://cassandra.apache.org[Apache Cassandra] database instances.

This document describes implementation examples using Anypoint Studio, Mule ESB’s graphical user interface, and includes configuration details for using the XML Editor. 

*Release Notes*: link:/documentation/display/current/Cassandra+Connector+Release+Notes[Cassandra Connector Release Notes]

== Prerequisites

This document assumes that you are familiar with Mule, link:/documentation/display/current/Anypoint+Connectors[Anypoint Connectors], and the link:/documentation/display/current/Anypoint+Studio+Essentials[Anypoint Studio Essentials]. To increase your familiarity with Studio, consider completing one or more link:/documentation/display/current/Basic+Studio+Tutorial[Anypoint Studio Tutorials]. Further, this page assumes that you have a basic understanding of link:/documentation/display/current/Mule+Concepts[Mule flows] and link:/documentation/display/current/Global+Elements[Mule Global Elements]. 

== Installing Cassandra Connector in Anypoint Studio

You can "test drive" a connector in Anypoint Studio using the instructions in http://www.mulesoft.org/documentation/display/current/Anypoint+Exchange#AnypointExchange-InstallingaConnectorfromAnypointExchange[Installing a Connector from Anypoint Exchange]. 

== Configuring the Cassandra Connector

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
To use the CassandraDB connector in your Mule application, you must configure:

* A global CassandraDB element for use by all the CassandraDB connectors in an application. For more information, see link:/documentation/display/current/Global+Elements[Mule Global Elements].

* Parameters of each CassandraDB connector instance in the application.

Follow these steps to configure CassandraDB connector in a Mule application:

. Click the *Global Elements* tab at the base of the canvas, then click *Create*.

. In the *Choose Global Type* menu, use the filter to locate and select *CassandraDB*, then click *OK*.

. Configure the parameters according to the table below
+
image:/documentation/download/attachments/122752088/Config.png?version=1&modificationDate=1406713924118[image]
+
[width="100%",cols=",",options="header"]
|===
|Parameter |Description
|*Name* |Enter a name for the configuration so it can be referenced later by the `config-ref` parameter in the flow.
|*Username* |Enter a Cassandra username. Use a dummy username if you have disabled authentication.
|*Password* |Enter the password. Leave this field empty if you have disabled authentication.
|*Host* |Enter host name or IP address of the application.
|*Port* |Enter a port number. The default port is 9160.
|*Keyspace* |Enter the Cassandra keyspace. A keyspace groups column families together.
|*Consistency Level* |Specify the number of replicas that need to respond to a read request before returning data to an application. ONE is the default.
|===
+
. Access the *Pooling Profile* tab to configure any settings relevant to managing multiple connections using a connection pool.

. Access the *Reconnection* tab to configure any settings relevant to reconnection strategies that Mule should execute if it loses its connection to Cassandra.

. Click *OK* to save the global connector configurations.

. Return to the Message Flow tab in Studio.

*Configuration in a Flow*

Follow these steps to configure the parameters of the CassandraDB connector in the flow:

. Drag the CassandraDB connector onto the canvas, then select it to open the Properties Editor console.

. Configure these connector parameters:
+
[width="100%",cols=",",options="header"]
|===
|Field |Description |Default
|*Display Name* |Enter a unique label for the connector in your application. |Cassandra DB
|*Connector Configuration* |Connect to a global element linked to this connector. Global elements encapsulate reusable data about the connection to the target resource or service. Select the global CassandraDB connector element that you just created. |--
|*Operation* |Select the action this component must perform. |--
|===

. Click blank space on the canvas to save your configurations.
....
[tab,title="XML Editor"]
....
Include the CassandraDB namespaces in your configuration file:

[source,xml]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:cassandradb="http://www.mulesoft.org/schema/mule/cassandradb"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/cassandradb
               http://www.mulesoft.org/schema/mule/cassandradb/current/mule-cassandradb.xsd">
 
      <!-- Your flows and configuration elements -->
 
</mule>
----

Follow these steps to configure a CassandraDB connector in your application:

. Create a global CassandraDB configuration outside and above your flows, using this global configuration code:
+
Build your application flow, then add a CassandraDB connector using one of the following operations.
+
The following table provides details on each operation:  
+
[cols=",",options="header",]
|===
|Operation |Description
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#add[<cassandradb:add>] |Increments a CounterColumn consisting of (name, value) at the given ColumnParent.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#batch-mutable[<cassandradb:batch-mutable>] |Executes the specified batch mutations on the keyspace.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-cluster-name[<cassandradb:describe-cluster-name>] |Gets the name of the cluster.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-keyspace[<cassandradb:describe-keyspace>] |Gets information about the specified keyspace.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-keyspaces[<cassandradb:describe-keyspaces>] |Gets a list of all the keyspaces configured for the cluster.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-partitioner[<cassandradb:describe-partitioner>] |Gets the name of the partitioner for the cluster.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-ring[<cassandradb:describe-ring>] |Gets the token ring; a map of ranges to host addresses.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-schema-versions[<cassandradb:describe-schema-versions>] |Returns a list of nodes per version for each schema version present in a cluster.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-snitch[<cassandradb:describe-snitch>] |Gets the name of the snitch used for the cluster. A snitch indicates which datacenter and rack that data is written to and from.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#describe-version[<cassandradb:describe-version>] |Gets the Thrift API version.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#execute-cql-query[<cassandradb:execute-cql-query>] |Executes a CQL (Cassandra Query Language) statement and returns a CqlResult containing the results.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#get[<cassandradb:get>] |Gets Column or SuperColumn by the path.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#get-count[<cassandradb:get-count>] |Counts the columns present in column_parent within the predicate.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#get-indexed-slices[<cassandradb:get-indexed-slices>] |Returns a list of slices, but uses IndexClause instead of KeyRange.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#get-range-slices[<cassandradb:get-range-slices>] |Replaces get_range_slices.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#get-row[<cassandradb:get-row>] |Gets Column or SuperColumn by the path.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#get-slice[<cassandradb:get-slice>] |Gets the group of columns contained by column_parent (either a ColumnFamily name or a ColumnFamily and SuperColumn name pair) specified by the given SlicePredicate (start, finish, reversed and count) parameters.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#insert[<cassandradb:insert>] |Inserts a Column consisting of name, value, timestamp, and ttl (time to live) for a ColumnParent.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#insert-from-map[<cassandradb:insert-from-map>] |Inserts an object into the database.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#multiget-count[<cassandradb:multiget-count>] |Provides a combination of multiget_slice and get_count.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#multiget-slice[<cassandradb:multiget-slice>] |Retrieves slices for column_parent and predicate on each of the given keys in parallel.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#remove[<cassandradb:remove>] |Removes data from a row specified by a key at the granularity specified by column_path, and the given timestamp.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#remove-counter[<cassandradb:remove-counter>] |Removes a counter from the row specified by a key at the granularity specified by column_path.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#set-query-keyspace[<cassandradb:set-query-keyspace>] |Sets the keyspace to use for subsequent requests.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-add-column-family-from-object[<cassandradb:system-add-column-family-from-object>] |Adds a column family from an object.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-add-column-family-from-object-with-simple-names[<cassandradb:system-add-column-family-from-object-with-simple-names>] |Adds a column family from an object that has a simple name.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-add-column-family-with-params[<cassandradb:system-add-column-family-with-params>] |Adds a column family to the current keyspace.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-add-keyspace-from-object[<cassandradb:system-add-keyspace-from-object>] |Creates a new keyspace and any column families defined with it.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-add-keyspace-with-params[<cassandradb:system-add-keyspace-with-params>] |Creates a new keyspace with the provided name with all the defaults values
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-drop-column-family[<cassandradb:system-drop-column-family>] |Drops a column family.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-drop-keyspace[<cassandradb:system-drop-keyspace>] |Drops a keyspace.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-update-column-family[<cassandradb:system-update-column-family>] |Updates properties of a ColumnFamily.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#system-update-keyspace[<cassandradb:system-update-keyspace>] |Updates properties of a keyspace.
| http://mulesoft.github.io/CassandraDB-connector/mule/cassandradb-config.html#truncate[<cassandradb:truncate>] |Removes all the rows from a column family.
|===
....
------

== Example Use Case

Adds a new keyspace in the Apache Cassandra database with default values. A keyspace groups column families together.

image:/documentation/download/attachments/122752088/cassandra.png?version=1&modificationDate=1420482958559[image]

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
. Drag an HTTP Connector into a new flow, open it's properties editor and Create a new *Connector Configuration* element by clicking the green plus sign.

. Fill in the two required fields: *Host* and *Port*. Set the host to `localhost` and leave the port as the default value `8081`. Also set the *Path* to `cassandra` +
+
[width="100%",cols=",",options="header"]
|===
|Field |Value
|*Name* |`HTTP_Listener_Configuration`
|*Host* |`localhost`
|*Port* |`8081`
|*Path* |`cassandra`
|===

. Back in the connector's properties editor, set the path to `addKeyspace`

. Drag the CassandraDB connector onto the canvas, then select it to open the properties editor console.

. Click the *+* sign next to the *Connector Configuration* field to add a new global connector configuration:
+
image:/documentation/download/attachments/122752088/addconfig.png?version=1&modificationDate=1406796741461[image]

. Configure the global element:
+
[width="100%",cols=",",options="header"]
|===
|Field |Value
|*Name* |CassandraDB (or any other name you prefer)
|*Username* |<Your Cassandra username> (You can use a dummy username if you disabled authentication)
|*Password* |<Your Cassandra password> ( You can leave this element blank if you disabled authentication)
|*Host* |localhost
|*Port* |9160 (default is 9160)
|*Keyspace* |<Cassandra Keyspace>
|*Consistency Level* |ONE (default)
|===

. In the properties editor of the CassandraDB connector, configure the remaining parameters:
+
image:/documentation/download/attachments/122752088/cassandra+conf+1.png?version=1&modificationDate=1420483934380[image]
+
[width="100%",cols=",",options="header"]
|=====
|Field |Value
|*Display Name* |Add-Keyspace (or any other name you prefer)
|*Connector * *Configuration* |CassandraDB (name of the global element you have created)
|*Operation* |System adds a keyspace with parameters
|*Keyspace Name* |`#[message.inboundProperties.'http.query.params'.keyspace]`
|=====

. Run the project as a Mule Application (right-click project name, then select *Run As* > *Mule Application*).

. From a browser, navigate to` http://localhost:8081/?keyspace=`_<keyspacename>_ 

.Mule conducts the query, and creates the CassandraDB keyspace with the specified name.
....
[tab,ttile="XML Editor"]
....
. Add a `cassandradb:config` element to your project, then configure its attributes according to the table below.
+
[source,xml]
----
<cassandradb:config name="Cassandradb" username="dummy"  keyspace="system" doc:name="Cassandradb"/>
----
+
[width="100%",cols=",",options="header"]
|===
|Attribute |Value
|*name* |CassandraDB
|*doc:name* |CassandraDB
|*username* |<Your Cassandra username>
|*keyspace* |system
|===

. Create a Mule flow with an HTTP endpoint, configuring the endpoint according to the table below.
+
[source,xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="addKeyspace" doc:name="HTTP"/>
----
+
[width="100%",cols=",",options="header"]
|===
|Attribute |Value
|*config-ref* |HTTP_Listener_Configuration
|*path* |addKeyspace
|*doc:name* |HTTP
|===

. The **config-ref** attribute in the connector references a global element, you must now create this global element outside your flow.
+
[source,xml]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" basePath="cassandra" doc:name="HTTP Listener Configuration"/>
----
+
[width="100%",cols=",",options="header"]
|===
|Attribute |Value
|*name* |`HTTP_Listener_Configuration`
|*host* |`localhost`
|*port* |`8081`
|*basePath* |`cassandra`
|*http://docname[doc:name]* a|`HTTP Listener Configuration`
|===

. Add a `cassandradb:system-add-keyspace-with-params` element to your flow, configuring the attributes according to the table below.
+
[source,xml]
----
<cassandradb:system-add-keyspace-with-params config-ref="Cassandradb" keyspaceName="#[message.inboundProperties.'http.query.params'.keyspace]"  doc:name="Add-Keyspace">
        </cassandradb:system-add-keyspace-with-params>
----
+
[width="20%",cols="10%,90%",options="header",]
|====
a|Attribute
a|Value
|*config-ref* |Cassandradb
|*keyspaceName* a|`#[message.inboundProperties.'http.query.params'.keyspace]`
|*doc:name* a|`Add-Keyspace`
|====

. Run the project as a Mule Application (right-click project name, then select **Run As > Mule Application**).

. From a browser, navigate to` http://localhost:8081/?keyspace=   `<keyspacename>

. Mule conducts the query, and adds the keyspace with the specified name.
....
------

== Example Code

[source,xml]
----
<mule xmlns:scripting="http://www.mulesoft.org/schema/mule/scripting" xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml" xmlns:json="http://www.mulesoft.org/schema/mule/json" xmlns:cassandradb="http://www.mulesoft.org/schema/mule/cassandradb" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.1" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/cassandradb http://www.mulesoft.org/schema/mule/cassandradb/current/mule-cassandradb.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/scripting http://www.mulesoft.org/schema/mule/scripting/current/mule-scripting.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
 
    <cassandradb:config name="Cassandradb" username="dummy" keyspace="system" doc:name="Cassandradb"/>
    <cassandradb:config name="CassandradbNuevo" username="dummy"  keyspace="NewUserKeyspace" doc:name="Cassandradb"/>
 
    <http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" basePath="cassandra" doc:name="HTTP Listener Configuration"/>
    <flow name="AddKeyspace" doc:name="AddKeyspace">
        <http:listener config-ref="HTTP_Listener_Configuration" path="addKeyspace" doc:name="HTTP"/>
        <cassandradb:system-add-keyspace-with-params config-ref="Cassandradb" keyspaceName="#[message.inboundProperties.'http.query.params'.keyspace]" doc:name="Add-Keyspace">
        </cassandradb:system-add-keyspace-with-params>
        <set-payload value="New keyspaces #[message.inboundProperties.'http.query.params'.keyspace] was added. New schema key #[payload]" doc:name="Set Payload"/>
    </flow>
    <flow name="Batch-mutable" doc:name="Batch-mutable">
        <http:listener config-ref="HTTP_Listener_Configuration" doc:name="HTTP"/>
        <cassandradb:add config-ref="" doc:name="Cassandradb" columnParent="" counterName="" counterValue="" rowKey=""/>
    </flow>
----

*Note*: In this code example, `spring-beans-current.xsd` is a placeholder. To locate the correct version, see http://www.springframework.org/schema/beans/[http://www.springframework.org/schema/beans/].

== See Also

* Learn more about working with link:/documentation/display/current/Anypoint+Connectors[Anypoint Connectors].

* Access the link:/documentation/display/current/Cassandra+Connector+Release+Notes[CassandraDB connector release notes]. 
